	  (and possibly others not based on charybdis/ratbox/ircd-seven)
	* Fix issues with plugins that modify outgoing messages
	  (such as the custom PART/QUIT feature of the IRC More plugin)

	Pidgin:
	* Better support for dark themes. (#12572 Alyssa Rosenzweig and Gary Kramlich)
	* Fixed IPv6 links by not escaping []'s. (#16391 cyisfor) (PR #270 Daniel Kamil Kozar)

version 2.12.0 (03/09/2017):
	libpurple:
	* Fix an out of bounds memory write in purple_markup_unescape_entity.
	  CVE-2017-2640
	* Fix use of uninitialised memory if running non-debug-enabled versions of glib
	* Updated AIM dev and dist ID's to new ones that were assigned by AOL.
	* TLS certificate verification now uses SHA-256 checksums.
	* Fixed SASL external auth for Freenode.
	* Removed the MSN protocol plugin. It has been unusable and dormant for some
	  time. MSNP18 has been discontinued and the protocol plugin would require a
	  large update to start working again. See: http://ismsndeadyet.com/ The
	  third-party Pidgin SkypeWeb plugin, however, should provide enough
	  functionality as a replacement if people still want to use MSN:
	  https://github.com/EionRobb/skype4pidgin/tree/master/skypeweb
	* Removed Mxit protocol plugin. The service was closed at the end of
	  September 2016. See
	  https://pidgin.im/pipermail/devel/2016-September/024078.htm
	* Removed the MySpaceIM protocol plugin. The service has been defunct for a
	  long time. (#15356)
	* Remove the Yahoo! protocol plugin. Yahoo has completely
	  reimplemented their protocol, so this version is no longer operable as
	  of August 5th, 2016:
	  https://yahoo.tumblr.com/post/145715934739/q2-2016-progress-report-on-our-product
	  A new protocol plugin has been written to support the new protocol.
	  It can be found here: https://github.com/EionRobb/funyahoo-plusplus
	  This also removes support for Yahoo! Japan. According to
	  http://messenger.yahoo.co.jp/ the service ended March 26th, 2014.